k8s-blue-green/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment-blue
  labels:
    app: my-app
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: blue
  template:
    metadata:
      labels:
        app: my-app
        version: blue
    spec:
      containers:
      - name: my-app
        image: harbor.pks.vxflex.poc/devops/demo:blue 
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
