k8s-blue-green/service.yml
kind: Service
apiVersion: v1
metadata:
  name: my-blue-green-service
spec:
  selector:
    app: my-app

  ports:
  - protocol: TCP
    port: 8989
    targetPort: 9999
